Updated demo project

--- a/Module 3 - Django/django_webapp/polls/templates/polls/index.html
+++ b/Module 3 - Django/django_webapp/polls/templates/polls/index.html
@@ -16,4 +16,9 @@
     {% else %}
         <p>No polls are currently available.</p>
     {% endif %}
+
+    {% include './partial.html' with polls=polls polls_two=polls %}
 {% endblock %}
+
+
+
